--- a/src/app/restaurant/settings/change-time/change-time.component.scss
+++ b/src/app/restaurant/settings/change-time/change-time.component.scss
@@ -1,15 +1,15 @@
 .app {
     width: 100vw;
     height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
+    background-color: rgba(0, 0, 0, 0.25);
     display: flex;
     align-items: center;
     flex-direction: column;
     padding-top: 10vh;
-    z-index: 999999999999;
-    background-color: rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999999999999999999999999999999999999999;
 
     .box {
         width: 512px;
