--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -78,7 +78,8 @@ button {
     }
 }
 .orange-button {
-    width: 120px;
+    width: auto;
+    padding: 4px 8px;
     height: 32px;
     display: flex;
     justify-content: center;
